--- a/frontend/src/i18n/locales/ru.json
+++ b/frontend/src/i18n/locales/ru.json
@@ -71,7 +71,8 @@
       "preferredFood": "Любимые роллы или пожелания",
       "feedback": "Ваши пожелания для нас",
       "street": "Улица",
-      "postalCode": "Почтовый код"
+      "postalCode": "Почтовый код",
+      "marketingConsent": "Я согласен получать маркетинговые предложения и обновления."
     },
     "placeholders": {
       "firstName": "Например, Анна",
