--- a/frontend/src/i18n/locales/uk.json
+++ b/frontend/src/i18n/locales/uk.json
@@ -55,7 +55,8 @@
       "preferredFood": "Улюблені роли або побажання",
       "feedback": "Ваші побажання для нас",
       "street": "Вулиця",
-      "postalCode": "Поштовий код"
+      "postalCode": "Поштовий код",
+      "marketingConsent": "Я погоджуюся отримувати маркетингові пропозиції та оновлення."
     },
     "placeholders": {
       "firstName": "наприклад, Анна",
