--- a/frontend/src/i18n/locales/de.json
+++ b/frontend/src/i18n/locales/de.json
@@ -26,7 +26,9 @@
       "feedback": "Deine Hinweise an uns",
       "street": "Straße",
       "postalCode": "Postleitzahl",
-      "country": "Country"
+      "country": "Country",
+      "marketingConsent": "Ich bin damit einverstanden, Marketingangebote und Neuigkeiten zu erhalten."
+      
     },
     "placeholders": {
       "firstName": "z. B. Anna",
