--- a/frontend/src/i18n/locales/es.json
+++ b/frontend/src/i18n/locales/es.json
@@ -60,7 +60,8 @@
       "preferredFood": "Rollos favoritos o deseos",
       "feedback": "Tus deseos para nosotros",
       "street": "Calle",
-      "postalCode": "Código postal"
+      "postalCode": "Código postal",
+      "marketingConsent": "Acepto recibir ofertas y actualizaciones de marketing."
     },
     "placeholders": {
       "firstName": "ej. Ana",
