--- a/frontend/src/i18n/locales/ru.json
+++ b/frontend/src/i18n/locales/ru.json
@@ -264,6 +264,7 @@
       "fields": {
         "title": "Заголовок",
         "body": "Текст сообщения"
+        
       },
       "placeholder": {
         "title": "Например, \"Hot Roll Weekend\"",
@@ -467,7 +468,7 @@
       "recipients": "Получатели",
       "selectAll": "Выбрать всех",
       "clearAll": "Очистить",
-      "sendButton2": "Отправить {{count}} получателям",
+      "sendButton": "Отправить {{count}} получателям",
       "massTitle": "Массовая рассылка (Всем подписчикам)",
       "massDesc": "Используйте эту форму для отправки сообщения всем клиентам, которые подписаны на рассылку.",
       "massSms": {
